# video-storage

./: .gitignore  Makefile  docker-compose.yml
ui-video-upload-service/: .dockerignore  .env.example  .gitignore  .project.rules  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
ui-video-upload-service/src/: App.tsx  index.css  main.tsx
ui-video-upload-service/src/entities/video/: types.ts
ui-video-upload-service/src/tests/: setup.ts
video-upload-service/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
video-upload-service-v2/: .dockerignore  Dockerfile  Dockerfile.worker  docker-compose.yml  package-lock.json  package.json  tsconfig.json
video-upload-service-v2/apps/video-worker/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
video-upload-service-v2/prisma/: schema.prisma
video-upload-service-v2/src/: app.module.ts  main.ts
video-upload-service/migrations/: 001_create_videos_table.down.sql  001_create_videos_table.up.sql
video-upload-service/src/: main.rs
video-upload-service/src/config/: mod.rs
video-upload-service/src/db/: connection.rs  mod.rs
video-upload-service/src/dto/: mod.rs
video-upload-service/src/errors/: mod.rs
video-upload-service/src/handlers/: health.rs  mod.rs
video-upload-service/src/jobs/: mod.rs
video-upload-service/src/middleware/: mod.rs
video-upload-service/src/models/: mod.rs
video-upload-service/src/repositories/: mod.rs
video-upload-service/src/s3/: mod.rs
video-upload-service/src/services/: mod.rs
(+69 files in other folders)
